--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="WEB-INF/src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/slf4j-api-1.7.12.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/logback-access-1.1.3.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/logback-classic-1.1.3.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/logback-core-1.1.3.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/velocity-1.7-dep.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/velocity-1.7.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.32/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
