--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry kind="lib" path="WEB-INF/lib/logback-core-1.1.3.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/velocity-1.7-dep.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/velocity-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.32/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/usr/local/apache-tomcat-8.0.32/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
