--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -11,7 +11,20 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
         </init-param>
     </filter>
 
-
+    <servlet>
+        <description>This is a Teapot Servlet Project(Resource).</description>
+        <servlet-name>resource</servlet-name>
+        <servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>0</param-value>
+        </init-param>
+        <init-param>
+            <param-name>listings</param-name>
+            <param-value>false</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
     <servlet>
         <description>This is a Teapot Servlet Project.</description>
         <servlet-name>teapot</servlet-name>
@@ -31,8 +44,12 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
     </filter-mapping>
 
     <servlet-mapping>
+        <servlet-name>resource</servlet-name>
+        <url-pattern>*.css</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
       <servlet-name>teapot</servlet-name>
-      <url-pattern>/*</url-pattern>
+      <url-pattern>/t/*</url-pattern>
     </servlet-mapping>
 
 
